# Fifteen-WinAPI

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Report/: Algorithm_scheme_Nadenenko.vsdx  Report_Nadenenko.docx
